# index_analysis

./: .gitignore  AGENTS.md  README.md  app.py  requirements.txt
.github/: CODEOWENERS  dependabot.yml
.github/actions/dump/: action.yml
.github/workflows/: chapter3-pr.yml  chapter3-push.yml  contexts.yml  denpendabot_auto_merge.yml  dump.yml  hello.yml  manual.yml  push-actions.yml  python-test.yml  static-action-lint.yml
config/: loader.py  setting.yml
docs/: arch_memo.md  architecture.md
domain/: gamma.py  pain_point.py
src/index_analysis/: pyproject.toml
src/index_analysis/application/ports/: market_data_port.py  option_chain_port.py
src/index_analysis/application/use_cases/: build_gamma_profile.py  calculate_pain_points.py
src/index_analysis/config/: loader.py
src/index_analysis/domain/: gamma.py  pain_point.py
src/index_analysis/infrastructure/yahoo/: yahoo_market_data.py  yahoo_option_chain.py
src/index_analysis/presentation/streamlit/: app.py  charts.py  selection_summary.py  sidebar.py
test/: test_sample.py
tests/: test_sample.py
tests/application/: test_build_gamma_profile.py  test_calculate_pain_points.py
tests/domain/: test_gamma.py  test_pain_point.py
tests/infrastructure/: test_yaml_settings_loader.py
use_cases/: calculate_pain_points.py
