[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "index-analysis"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
  "streamlit==1.50.0",
  "yfinance==1.2.0",
  "pandas==2.3.3",
  "requests==2.32.5",
  "PyYAML==6.0.2",
  "altair",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]